--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
       <head>
-          <title>hello, world</title>
+          <title>well come to web prioject Nepal</title>
       </head>
       <body>
 
-            <h1>This is a Heading</h1>
-            <p>This is a paragraph.</p>
+            <h1>web project Nepal</h1>
+            <p>home</p>
+            <h2>degital marketting</h2>
+            <h3>Nepals famous places</h3>
+            <h4>nepals famoous mountain </h4>
 
       </body>
 </html>
