--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
             <h1>web project Nepal</h1>
             <p>home</p>
+            <p1>introducing of nepal</p1>
             <h2>degital marketting</h2>
             <h3>Nepals famous places</h3>
-            <h4>nepals famoous mountain </h4>
+            <h4>nepals famoous mountains </h4>
 
       </body>
 </html>
