--- a/mteverest.html
+++ b/mteverest.html
@@ -337,11 +337,15 @@
 
         </form>
       </section>
+      <script type="text/javascript">
+          document.getElementById("Name").onclick = function(){
+            var nameEntered = document.getElementById("yourname").value;
+            alert(nameEntered);
+          }
 
-      <footer>
-        <div class="container">
-          
-        </div>
-      </footer>
+
+
+
+      </script>
     </body>
 </html>
