--- a/mteverest.html
+++ b/mteverest.html
@@ -340,7 +340,14 @@
       <script type="text/javascript">
           document.getElementById("Name").onclick = function(){
             var nameEntered = document.getElementById("yourname").value;
-            alert(nameEntered);
+            var yourname = "kamal bhandari";
+            if (nameEntered == yourname) {
+              alert("correct!!");
+
+            }else {
+              alert("try again")
+            }
+            
           }
 
 
