--- a/mteverest.html
+++ b/mteverest.html
@@ -302,7 +302,7 @@
                          <p> A HTML projects about some facts about the everest.</p>
                     </div>
 
-                    <a class="button" href="../html/my-webpage.html" target="_bank">View Project</a>
+                    <a class="button" href="my-webpage.html" target="_bank">View Project</a>
                     <a class="button" href="https://www.snow-forecast.com/resorts/Everest/snow-report?" target="_bank">View Project</a>
                     
               </div>
@@ -401,6 +401,16 @@
 
        
     </script>
+
+                 <audio controls>
+                  <source src="audio.mp3">
+                   please upgrade your browser!
+                   </audio>
+ 
+                  <video width="500" height="320" controls>
+                  <source src="video.mp4">
+                   please upgrade your browser!
+                   </vedio>
 
     </body>
 </html>
